# BioFileKit

./: LICENSE  README.md  pyproject.toml
biofile_kit/fasta_utils/: __init__.py  fa2tab.py  gap_location.py  hardmasked_to_softmasked.py  telomere_finder.py
biofile_kit/gff_utils/: __init__.py  gff_sort.py  rename.py  stats.py
biofile_kit/gt_utils/: __init__.py  stat_gt.py
biofile_kit/gtf_utils/: __init__.py
biofile_kit/vcf_utils/: __init__.py  vcf2gt.py
