[tool.poetry]
name = "biofile_kit"
version = "0.0.0"
description = "Bioinformatics File Operations Toolkit."
authors = ["Wenlin Xu <wenlinxu.njfu@outlook.com>"]
readme = "README.md"
packages = [{include = "biofile_kit"}]

[tool.poetry.dependencies]
python = "^3.8"
pybioinformatic = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fasta_tools = "biofile_kit.bin.fasta_tools:fasta_tools"
gff_tools = "biofile_kit.bin.gff_tools:gff_tools"
gtf_tools = "biofile_kit.bin.gtf_tools:gtf_tools"
