[tool.poetry]
name = "biofile-kit"
version = "0.1.0"
description = "Bioinformatics File Operations Toolkit."
authors = ["Wenlin Xu <wenlinxu.njfu@outlook.com>"]
homepage = "https://github.com/wenlinXu-njfu/BioFileKit"
readme = "README.md"
license = "MIT"
packages = [{include = "biofile_kit"}]

[tool.poetry.dependencies]
python = ">=3.8"
pybioinformatic = ">=1.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fasta_tools = "biofile_kit.bin.fasta_tools:fasta_tools"
gff_tools = "biofile_kit.bin.gff_tools:gff_tools"
gt_kit = "biofile_kit.bin.gt_kit:gt_kit"
gtf_tools = "biofile_kit.bin.gtf_tools:gtf_tools"
vcf_tools = "biofile_kit.bin.vcf_tools:vcf_tools"